--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "Heterotic"
+name = "Quromorphic"
 uuid = "ad75e402-0094-4822-903c-3542ee61ae4f"
 authors = ["jajapuramshivasai <jajapuramshivasai@gmail.com> and contributors"]
 version = "1.0.0-DEV"
