--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Quromorphic"
 uuid = "ad75e402-0094-4822-903c-3542ee61ae4f"
 authors = ["jajapuramshivasai <jajapuramshivasai@gmail.com> and contributors"]
-version = "1.0.0-DEV"
+version = "0.1.0-alpha"
 
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
