--- a/Project.toml
+++ b/Project.toml
@@ -1,21 +1,27 @@
 name = "Quromorphic"
 uuid = "ad75e402-0094-4822-903c-3542ee61ae4f"
-authors = ["jajapuramshivasai <jajapuramshivasai@gmail.com> and contributors"]
 version = "0.1.0-alpha"
+authors = ["jajapuramshivasai <jajapuramshivasai@gmail.com> and contributors"]
 
 [deps]
+ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Metal = "dde4c033-4e86-420c-a63e-0dd931031962"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
+ChainRulesCore = "1.26.0"
 Documenter = "1.14.1"
 DocumenterTools = "0.1.20"
 LinearAlgebra = "1.11.0"
+Metal = "1.9.0"
 Random = "1.11.0"
 Statistics = "1.11.1"
+Zygote = "0.7.10"
 julia = "1.10"
 
 [extras]
