--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,3 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-Quromorphic = "ad75e402-0094-4822-903c-3542ee61ae4f"
+Quromorphic = { path = ".." }
